--- a/exercise_1.ipynb
+++ b/exercise_1.ipynb
@@ -2,35 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8b8fa50c-7b28-4cc6-912c-179a9f15a2c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy\n"
+    "import spacy\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ae6d93b3-ade4-4677-bb53-57c87b1101f4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'spacy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nlp \u001b[38;5;241m=\u001b[39m spacy\u001b[38;5;241m.\u001b[39mblank(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSend an email to vin@gmail.com and s@gmail.com\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m doc \u001b[38;5;241m=\u001b[39m nlp(text)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'spacy' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vin@gmail.com\n",
+      "s@gmail.com\n",
+      "test@gmail.com\n"
      ]
     }
    ],
    "source": [
     "nlp = spacy.blank('en')\n",
-    "text = \"Send an email to vin@gmail.com and s@gmail.com\"\n",
+    "text = \"Send an email to vin@gmail.com and s@gmail.com and test@gmail.com\"\n",
     "doc = nlp(text)\n",
     "for ent in doc:\n",
     "    if ent.like_email:\n",
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "cd184760-b37b-4ef9-8094-75c367748b6d",
    "metadata": {},
    "outputs": [],
