--- a/exercise_1.ipynb
+++ b/exercise_1.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8b8fa50c-7b28-4cc6-912c-179a9f15a2c1",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "import spacy\n",
